--- a/all/themes/pixelgarage/less/pxlComponents/view-social-masonry.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-social-masonry.less
@@ -18,6 +18,66 @@
 
   .view-filters {
     margin-bottom: 52px;
+
+    .views-exposed-form {
+      .views-exposed-widgets {
+        margin: 0;
+
+        .views-exposed-widget {
+          float: none;
+          margin: 0;
+          padding: 0;
+
+          >label {
+            display: none;
+          }
+
+          .views-widget {
+            .form-radios {
+              text-align: center;
+
+              .radio {
+                display: inline-block;
+                margin: 0 -2px;
+
+                .control-label {
+                  display: block;
+                  padding: 8px 12px 10px;
+                  font-family: @pxl-text-font;
+                  font-size: 16px;
+                  line-height: 1;
+                  color: @pxl-color-gray-text;
+                  #pxl-mixins.border-radius(0);
+                  border: 1px solid @pxl-color-gray-text;
+                  background-color: #fff;
+
+                  >input {
+                    display: none;
+                  }
+
+                  &:hover, &.active {
+                    color: #fff;
+                    background-color: @pxl-color-gray-text;
+                  }
+                }
+
+                &:first-child {
+                  .control-label {
+                    .border-left-radius(3px);
+                  }
+                }
+
+                &:last-child {
+                  .control-label {
+                    .border-right-radius(3px);
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
   }
 
   .view-content {
@@ -64,7 +124,7 @@
           opacity: 1.0;
         }
 
-        .pe-item-inner {
+        &.pe-item-ajax {
           cursor: pointer;
           // see nodes styling (news, testimonials, video etc.)
         }
@@ -78,6 +138,6 @@
   }
 
   .text-center {
-
+    #pxl-mixins.view-pager(@font-size-base, @pxl-color-gray-text, @pxl-color-hso-main);
   }
 }
