--- a/all/themes/pixelgarage/css/style.css
+++ b/all/themes/pixelgarage/css/style.css
@@ -12719,15 +12719,16 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
   font-size: 16px;
   margin-right: 10px;
 }
-.node.node-video.view-mode-full .row div.col-sm-12 .field-name-field-video .field-item .file-video iframe {
+.node.node-video.view-mode-full .row div.col-sm-12 .field-name-field-video .field-item .file-video .media-youtube-video {
+  height: auto;
+}
+.node.node-video.view-mode-full .row div.col-sm-12 .field-name-field-video .field-item .file-video .media-youtube-video iframe {
   display: block;
   margin: 0 auto;
   width: 100%;
-  height: auto;
-  max-width: 100%;
 }
 @media screen and (min-width: 768px) {
-  .node.node-video.view-mode-full .row div.col-sm-12 .field-name-field-video .field-item .file-video iframe {
+  .node.node-video.view-mode-full .row div.col-sm-12 .field-name-field-video .field-item .file-video .media-youtube-video iframe {
     width: 80%;
   }
 }
