--- a/all/themes/pixelgarage/less/mixins/bs-modal.less
+++ b/all/themes/pixelgarage/less/mixins/bs-modal.less
@@ -36,10 +36,10 @@
       }
       @media @tablet {
         width: 80%;
-        max-width: @container-desktop;
+        max-width: @container-tablet;
       }
       @media @normal {
-        width: @container-desktop;
+        width: @container-tablet;
       }
 
       .modal-content {
