--- a/all/themes/pixelgarage/less/pxlComponents/view-banners.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-banners.less
@@ -40,6 +40,29 @@
         }
       }
 
+      // fading carousel
+      &.carousel-fade {
+        > .carousel-inner {
+          .item {
+            opacity: 0;
+            #pxl-mixins.transition(opacity 2s);
+
+            &.active {
+              opacity: 1.0;
+
+              &.left, &.right {
+                left: 0;
+                opacity: 0;
+                z-index: 1;
+              }
+            }
+            &.left.next, &.right.prev {
+              opacity: 1.0;
+            }
+          }
+        }
+      }
+
       > .carousel-indicators {
         display: none;
         position: absolute;
@@ -65,6 +88,7 @@
 
       > a.carousel-control {
         display: none;
+        z-index: 2;
       }
     }
   }
