--- a/all/themes/pixelgarage/less/content.less
+++ b/all/themes/pixelgarage/less/content.less
@@ -41,6 +41,9 @@ body {
   height: 100%;
   min-height: 320px;
   background: @pxl-color-hso-sec none;
+  // sharper fonts
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .main-container {
