--- a/all/themes/pixelgarage/less/header.less
+++ b/all/themes/pixelgarage/less/header.less
@@ -138,19 +138,19 @@ header#navbar {
             }
 
             &.menu-kv {
-              border-bottom: @pxl-menu-border-thickness solid @pxl-color-hso-kv;
+              border-bottom: @pxl-menu-border-thickness solid @pxl-color-hso-kv-menu;
 
               a:hover, a.active-trail, a.active {
                 color: #fff;
-                background-color: @pxl-color-hso-kv;
+                background-color: @pxl-color-hso-kv-menu;
               }
             }
             &.menu-hs {
-              border-bottom: @pxl-menu-border-thickness solid @pxl-color-hso-hs;
+              border-bottom: @pxl-menu-border-thickness solid @pxl-color-hso-hs-menu;
 
               a:hover, a.active-trail, a.active {
                 color: #fff;
-                background-color: @pxl-color-hso-hs;
+                background-color: @pxl-color-hso-hs-menu;
               }
             }
             &.menu-ks {
