--- a/all/themes/pixelgarage/less/pxlComponents/date-popup.less
+++ b/all/themes/pixelgarage/less/pxlComponents/date-popup.less
@@ -44,8 +44,8 @@
     background: none;
   }
 
-  .ui-widget-header {
-    border: 1px solid @pxl-border-color;
+  .ui-datepicker-header {
+    border: none;
     #pxl-mixins.border-radius(0);
     background: #fff none;
 
