--- a/all/themes/pixelgarage/less/pxlComponents/node-testimonials.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-testimonials.less
@@ -29,11 +29,11 @@
       }
       .field-name-body {
         position: absolute;
-        left: 10%;
-        top: 55%;
-        width: 80%;
-        padding: 10px;
-        #pxl-mixins.border-radius(3px);
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        padding: 10px @grid-gutter-width 15px;
+        #pxl-mixins.border-radius(0);
         background-color: rgba(73, 74, 79, 0.5);
 
         .field-item {
