--- a/all/themes/pixelgarage/less/pxlComponents/view-call2action.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-call2action.less
@@ -90,23 +90,8 @@
 
                 .field-item {
                   a {
-                    display: block;
-                    margin: 0 auto;
-                    padding: 5px 0 7px;
+                    #pxl-mixins.button-large;
                     width: 50%;
-                    font-family: @pxl-text-font;
-                    font-size: @font-size-large;
-                    text-align: center;
-                    text-decoration: none;
-                    color: #fff;
-                    border: 1px solid @pxl-color-bg-button;
-                    #pxl-mixins.border-radius(3px);
-                    background: @pxl-color-bg-button;
-
-                    &:hover {
-                      border: 1px solid #fff;
-                      background: rgba(0,0,0,0.0);
-                    }
                   }
                 }
               }
