--- a/all/themes/pixelgarage/less/pxlComponents/view-social-masonry.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-social-masonry.less
@@ -115,7 +115,7 @@
       .pe-item {
         display: block;
         overflow: hidden;
-        margin-bottom: 3% !important;
+        margin: 0 -2px 3% !important;
         opacity: 0.1;
         #pxl-mixins.transition(opacity 1s);
         border: 1px solid @pxl-color-gray-border-light;
