--- a/all/themes/pixelgarage/less/pxlComponents/node-tweet.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-tweet.less
@@ -80,7 +80,7 @@
 // General settings
 // -------------------------
 .node.node-tweet.view-mode-teaser {
-  padding: 20px;
+  padding: 20px 20px 0;
   background-color: @pxl-color-hso-gray;
 
   .row {
@@ -126,6 +126,7 @@
       }
 
       .field-name-field-created-time {
+        margin-right: -20px;
         padding: 10px;
         width: 100%;
 
